Fixing width of images for teasers on tablet-up

--- a/source/_patterns/10-components/article-teaser/article-teaser.scss
+++ b/source/_patterns/10-components/article-teaser/article-teaser.scss
@@ -48,7 +48,7 @@
 
   @include tablet-up {
     margin-right: 16px;
-    width: 142px;
+    width: 168px;
   }
 }
 
